<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navMenuArteLista"
    app:startDestination="@+id/navHome">
    <fragment
        android:id="@+id/navHome"
        android:name="com.example.artelista.ui.home.HomeFragment"
        android:label="@string/strHome"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navGaleria"
        android:name="com.example.artelista.ui.dashboard.DashboardFragment"
        android:label="@string/strGaleria"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navGaleria_to_fragment_galeriadet"
            app:destination="@id/fragment_galeriadet" />
    </fragment>
    <fragment
        android:id="@+id/navEvento"
        android:name="com.example.artelista.ui.notifications.NotificationsFragment"
        android:label="@string/strEvento"
        tools:layout="@layout/fragment_notifications" >
        <action
            android:id="@+id/action_navEvento_to_fragment_ubicacion"
            app:destination="@id/fragment_ubicacion" />
    </fragment>
    <fragment
        android:id="@+id/navArtista"
        android:name="com.example.artelista.ui.Artista.ArtistaFragment"
        android:label="@string/strArtista"
        tools:layout="@layout/fragment_artista" >
        <action
            android:id="@+id/action_navArtista_to_fragment_artistadet"
            app:destination="@id/fragment_artistadet" />
    </fragment>
    <fragment
        android:id="@+id/fragment_galeriadet"
        android:name="com.example.artelista.fragment_galeriadet"
        android:label="fragment_galeriadet"
        tools:layout="@layout/fragment_galeriadet" />
    <fragment
        android:id="@+id/fragment_ubicacion"
        android:name="com.example.artelista.ui.fragment_ubicacion"
        android:label="fragment_ubicacion"
        tools:layout="@layout/fragment_ubicacion" >
        <action
            android:id="@+id/action_fragment_ubicacion_to_fragment_ubicaciondet"
            app:destination="@id/fragment_ubicaciondet" />
    </fragment>
    <fragment
        android:id="@+id/fragment_ubicaciondet"
        android:name="com.example.artelista.ui.fragment_ubicaciondet"
        android:label="fragment_ubicaciondet"
        tools:layout="@layout/fragment_ubicaciondet" />
    <fragment
        android:id="@+id/fragment_artistadet"
        android:name="com.example.artelista.ui.fragment_artistadet"
        android:label="fragment_artistadet"
        tools:layout="@layout/fragment_artistadet" />
</navigation>